[package]
name = "webrtc_latency"
version = "0.1.0"
edition = "2021"

[dependencies]
webrtc = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
bytes = "1"
env_logger = "0.11"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "offer"
path = "src/offer.rs"

[[bin]]
name = "answer"
path = "src/answer.rs"
